# ADataPro-Internship-2022

./: README.md  pyproject.toml
crawl_gov/: scrapy.cfg
crawl_gov/crawl_gov/: items.py  middlewares.py  pipelines.py  settings.py
crawl_gov/crawl_gov/spiders/: govSpider.py
